--- a/main.html
+++ b/main.html
@@ -19,29 +19,46 @@
         <h1 id="header-text">KARLSRUHE</h1>
     </div>
 </div>
-<div class="gallery">
-    <a target="_blank" href="tmp_images/schloss-karlsruhe-germany_l.jpg">
-        <img src="tmp_images/schloss-karlsruhe-germany_l.jpg" alt="Cinque Terre">
-    </a>
+
+<div class="gallery-grid">
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg"
+             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
+    </figure>
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg"
+             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
+    </figure>
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/lernzentrum.jpg" alt="Image form https://picsum.photos"
+             title="Image form https://picsum.photos">
+    </figure>
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/media.media.3e76bd21-abf8-4c71-814f-3f2716fd0ab5.original1024.jpg"
+             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
+    </figure>
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/rheinbruecke-karlsruhe-germany_2.jpeg"
+             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
+    </figure>
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/rheinhafen-karlsruhe-germany_2.jpeg"
+             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
+    </figure>
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/schloss-gottesaue-germany_l.jpeg"
+             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
+    </figure>
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/schloss-karlsruhe-germany-5lan_l.jpeg"
+             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
+    </figure>
+    <figure class="gallery-frame">
+        <img class="gallery-img" src="tmp_images/schloss-karlsruhe-germany_l.jpeg"
+             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
+    </figure>
 </div>
 
-<div class="gallery">
-    <a target="_blank" href="tmp_images/rheinbruecke-karlsruhe-germany_l.jpeg">
-        <img src="tmp_images/rheinbruecke-karlsruhe-germany_l.jpeg" alt="Forest">
-    </a>
-</div>
-
-<div class="gallery">
-    <a target="_blank" href="tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg">
-        <img src="tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg" alt="Northern Lights">
-    </a>
-</div>
-
-<div class="gallery">
-    <a target="_blank" href="tmp_images/zkm_mnk.jpg">
-        <img src="tmp_images/zkm_mnk.jpg" alt="Mountains">
-    </a>
-</div>
 <div style="padding: 100px">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
