--- a/main.html
+++ b/main.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/hero-banner.css">
-    <link rel="stylesheet" href="css/gallery.css">
 
 </head>
 <body>
@@ -20,62 +19,25 @@
     </div>
 </div>
 
-<div class="gallery-grid">
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg"
-             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
-    </figure>
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg"
-             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
-    </figure>
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/lernzentrum.jpg" alt="Image form https://picsum.photos"
-             title="Image form https://picsum.photos">
-    </figure>
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/media.media.3e76bd21-abf8-4c71-814f-3f2716fd0ab5.original1024.jpg"
-             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
-    </figure>
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/rheinbruecke-karlsruhe-germany_2.jpeg"
-             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
-    </figure>
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/rheinhafen-karlsruhe-germany_2.jpeg"
-             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
-    </figure>
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/schloss-gottesaue-germany_l.jpeg"
-             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
-    </figure>
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/schloss-karlsruhe-germany-5lan_l.jpeg"
-             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
-    </figure>
-    <figure class="gallery-frame">
-        <img class="gallery-img" src="tmp_images/schloss-karlsruhe-germany_l.jpeg"
-             alt="Image form https://picsum.photos" title="Image form https://picsum.photos">
-    </figure>
-</div>
-
-<div style="padding: 100px">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</div>
-<div style="padding: 100px">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</div>
-<div style="padding: 100px">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<div class="container">
+    <div>
+        <h3><strong>Gallery with Popup Slider</strong></h3>
+        <h4>Gallery Subtitle</h4>
+    </div>
+    <div class="row" id="gallery">
+        <div class="col-lg-4 col-md-6 col-xs-12">
+            <img class="w-100" src="tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg" alt="">
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12">
+            <img class="w-100" src="tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg" alt="">
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12">
+            <img class="w-100" src="tmp_images/rheinbruecke-karlsruhe-germany_2.jpeg" alt="">
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12">
+            <img class="w-100" src="tmp_images/schloss-gottesaue-germany_l.jpeg" alt="">
+        </div>
+    </div>
 </div>
 </body>
 
