gallery image overlay

--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/hero-banner.css">
+    <link rel="stylesheet" href="css/image-gallery.css">
 
 </head>
 <body>
@@ -25,17 +26,41 @@
         <h4>Gallery Subtitle</h4>
     </div>
     <div class="row" id="gallery">
-        <div class="col-lg-4 col-md-6 col-xs-12">
-            <img class="w-100" src="tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg" alt="">
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">Marktplatz</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12">
-            <img class="w-100" src="tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg" alt="">
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">Botanischer Garten</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12">
-            <img class="w-100" src="tmp_images/rheinbruecke-karlsruhe-germany_2.jpeg" alt="">
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="tmp_images/rheinbruecke-karlsruhe-germany_2.jpeg" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">Rheinbrücke</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12">
-            <img class="w-100" src="tmp_images/schloss-gottesaue-germany_l.jpeg" alt="">
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="tmp_images/schloss-gottesaue-germany_l.jpeg" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">Schloss Gottesaue</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
