--- a/main.html
+++ b/main.html
@@ -12,11 +12,15 @@
 </head>
 <body>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/resize_header.js"></script>
 <div class="hero-image">
     <div class="hero-text">
-        <h5 id="header-text2">Erkunde Fotospots in</h5>
+        <h5>Erkunde Fotospots in</h5>
         <h1 id="header-text">KARLSRUHE</h1>
+    </div>
+    <div class="header-buttons">
+        <div style="display: inline-block;"><button class="header-button">SPOTS</button></div>
+        <div style="width: 20px; display: inline-block;"></div>
+        <div style="display: inline-block;"><button class="header-button">MAPS</button></div>
     </div>
 </div>
 
