Adjusted image gallery with resized images

--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
     </div>
     <div class="row" id="gallery">
         <div class="col-lg-4 col-md-6 col-xs-12 con">
-            <img class="w-100 image" src="tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg" alt="">
+            <img class="w-100 image" src="images/content/image1.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
                     <div class="text">Marktplatz</div>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 con">
-            <img class="w-100 image" src="tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg" alt="">
+            <img class="w-100 image" src="images/content/image3.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
                     <div class="text">Botanischer Garten</div>
@@ -49,7 +49,34 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 con">
-            <img class="w-100 image" src="tmp_images/rheinbruecke-karlsruhe-germany_2.jpeg" alt="">
+            <img class="w-100 image" src="images/content/image2.png" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">Rheinhafen</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="images/content/image4.png" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">Lernzentrum</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="images/content/image5.png" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">ZKM</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="images/content/image6.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
                     <div class="text">Rheinbrücke</div>
@@ -58,10 +85,28 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 con">
-            <img class="w-100 image" src="tmp_images/schloss-gottesaue-germany_l.jpeg" alt="">
+            <img class="w-100 image" src="images/content/image7.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
                     <div class="text">Schloss Gottesaue</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="images/content/image8.png" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">Schloss</div>
+                    <div class="text2">&#x1F4CD; Karlsruhe</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12 con">
+            <img class="w-100 image" src="images/content/image10.png" alt="">
+            <div class="image-hover">
+                <div class="text-row">
+                    <div class="text">Turmberg</div>
                     <div class="text2">&#x1F4CD; Karlsruhe</div>
                 </div>
             </div>
