--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/hero-banner.css">
     <link rel="stylesheet" href="css/image-gallery.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 </head>
 <body>
@@ -18,9 +19,13 @@
         <h1 id="header-text">KARLSRUHE</h1>
     </div>
     <div class="header-buttons">
-        <div style="display: inline-block;"><button class="header-button">SPOTS</button></div>
+        <div style="display: inline-block;">
+            <button class="header-button">SPOTS</button>
+        </div>
         <div style="width: 20px; display: inline-block;"></div>
-        <div style="display: inline-block;"><button class="header-button">MAPS</button></div>
+        <div style="display: inline-block;">
+            <button class="header-button">MAPS</button>
+        </div>
     </div>
 </div>
 
@@ -115,4 +120,11 @@
 </div>
 </body>
 
+<footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col text-right align-self-end">©2021 Karlsruhe Fotospots - Lukas Freudenmann</div>
+        </div>
+    </div>
+</footer>
 </html>
