--- a/main.html
+++ b/main.html
@@ -29,10 +29,9 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container gallery-container">
     <div>
-        <h3><strong>Gallery with Popup Slider</strong></h3>
-        <h4>Gallery Subtitle</h4>
+        <h4>14 PHOTOS in 9 SPOTS</h4>
     </div>
     <div class="row" id="gallery">
         <div class="col-lg-4 col-md-6 col-xs-12 con">
