--- a/main.html
+++ b/main.html
@@ -10,22 +10,33 @@
     <link rel="stylesheet" href="css/image-gallery.css">
     <link rel="stylesheet" href="css/footer.css">
 
+
 </head>
 <body>
 <script src="js/bootstrap.min.js"></script>
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
 <div class="hero-image">
     <div class="hero-text">
         <h5>Erkunde Fotospots in</h5>
         <h1 id="header-text">KARLSRUHE</h1>
     </div>
     <div class="header-buttons">
-        <div style="display: inline-block;">
-            <button class="header-button">SPOTS</button>
-        </div>
-        <div style="width: 20px; display: inline-block;"></div>
-        <div style="display: inline-block;">
-            <button class="header-button">MAPS</button>
-        </div>
+        <table style="align-self: center">
+            <tr>
+                <td>
+                    <div>
+
+                        <button class="header-button"><i class="fas fa-street-view"></i>SPOTS</button>
+                    </div>
+                </td>
+                <td>
+                    <div>
+                        <button class="header-button"><i class="fas fa-map-marked-alt"></i>    MAPS</button>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
 
@@ -117,7 +128,6 @@
         </div>
     </div>
 </div>
-</body>
 
 <footer>
     <div class="container-fluid">
@@ -126,4 +136,6 @@
         </div>
     </div>
 </footer>
+</body>
+
 </html>
