--- a/main.html
+++ b/main.html
@@ -26,15 +26,15 @@
         <table style="align-self: center">
             <tr>
                 <td>
-                    <div>
+                    <a href="main.html">
 
                         <button class="header-button"><i class="fas fa-street-view"></i>SPOTS</button>
-                    </div>
+                    </a>
                 </td>
                 <td>
-                    <div>
+                    <a href="map.html">
                         <button class="header-button"><i class="fas fa-map-marked-alt"></i>    MAPS</button>
-                    </div>
+                    </a>
                 </td>
             </tr>
         </table>
