Sorting elements by distance

--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
         <h4>14 PHOTOS in 9 SPOTS</h4>
     </div>
     <div class="row" id="gallery">
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem1">
             <img class="w-100 image" src="images/content/image1.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem2">
             <img class="w-100 image" src="images/content/image3.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem3">
             <img class="w-100 image" src="images/content/image2.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem4">
             <img class="w-100 image" src="images/content/image4.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem5">
             <img class="w-100 image" src="images/content/image5.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem6">
             <img class="w-100 image" src="images/content/image6.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem7">
             <img class="w-100 image" src="images/content/image7.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem8">
             <img class="w-100 image" src="images/content/image8.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con">
+        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem9">
             <img class="w-100 image" src="images/content/image10.png" alt="">
             <div class="image-hover">
                 <div class="text-row">
