--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <title>Karlsruhe Fotospots</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/hero-banner.css">
     <link rel="stylesheet" href="css/image-gallery.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -13,7 +13,8 @@
 
 </head>
 <body onload="init()">
-<script src="js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 <script src="js/location.js"></script>
 
