--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 
 <div class="hero-image">
     <div class="hero-text">
-        <h5>Erkunde Fotospots in</h5>
+        <h3>Erkunde Fotospots in</h3>
         <h1 id="header-text">KARLSRUHE</h1>
     </div>
     <div class="header-buttons">
@@ -135,7 +135,7 @@
 <footer>
     <div class="container-fluid">
         <div class="row">
-            <div class="col text-right align-self-end">©2021 Karlsruhe Fotospots - Lukas Freudenmann</div>
+            <div>©2021 Karlsruhe Fotospots - Lukas Freudenmann</div>
         </div>
     </div>
 </footer>
