Added content page

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
                 </td>
                 <td>
                     <a href="map.html">
-                        <button class="header-button"><i class="fas fa-map-marked-alt"></i>    MAPS</button>
+                        <button class="header-button"><i class="fas fa-map-marked-alt"></i> MAPS</button>
                     </a>
                 </td>
             </tr>
@@ -48,15 +48,17 @@
         <h4>14 PHOTOS in 9 SPOTS</h4>
     </div>
     <div class="row" id="gallery">
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem1">
-            <img class="w-100 image" src="images/content/image1.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">Marktplatz</div>
-                    <div class="text2" id="MarktplatzDist"></div>
+        <a href="content_pages/Marktplatz.html" id="elem1">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image1.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">Marktplatz</div>
+                        <div class="text2" id="MarktplatzDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem2">
             <img class="w-100 image" src="images/content/image3.png" alt="">
             <div class="image-hover">
