--- a/map.html
+++ b/map.html
@@ -56,25 +56,23 @@
 
     var map = L.map('map')
     map.setView([49.010411077243255, 8.404078895912157], 13);
-    addMarkers()
+    addMarkers(0, 0)
 
     if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(onPos, showPosError);
     }
 
-    addMarkers()
-
     function onPos(position) {
         var latitude = position.coords.latitude;
         var longitude = position.coords.longitude;
         map.setView([latitude, longitude], 12);
-        addMarkers()
+        addMarkers(latitude, longitude)
     }
 
     function showPosError(error) {
     }
 
-    function addMarkers() {
+    function addMarkers(latitude, longitude) {
         var distances = ["MarktplatzDist", "BotatischerGartenDist", "RheinhafenDist", "LernzentrumDist", "ZKMDist",
             "RheinbrückeDist", "SchlossGottesaueDist", "SchlossDist", "TurmbergDist"];
         var positions = [
@@ -92,6 +90,17 @@
         L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
+
+        var greenIcon = new L.Icon({
+            iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+            iconSize: [25, 41],
+            iconAnchor: [12, 41],
+            popupAnchor: [1, -34],
+            shadowSize: [41, 41]
+        });
+
+        L.marker([latitude, longitude], {icon: greenIcon}).addTo(map).bindTooltip("You");
 
         for (let i = 0; i < distances.length; i++) {
             L.marker([positions[i * 2], positions[i * 2 + 1]]).on('click', function(e) {
