--- a/content_pages/marktplatz/Marktplatz.html
+++ b/content_pages/marktplatz/Marktplatz.html
@@ -5,28 +5,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="contentPageCSS.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../contentPageCSS.css">
+    <link rel="stylesheet" href="../../css/footer.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <script src="contentPageJS.js"></script>
+    <script src="../contentPageJS.js"></script>
 </head>
 <body onload="init()">
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="../main.html">Fotospots Karlsruhe</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../main.html">SPOTS</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../map.html">MAP</a>
-        </li>
-    </ul>
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <a class="navbar-brand" href="../../main.html">Fotospots Karlsruhe</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../../main.html">SPOTS</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../../map.html">MAP</a>
+            </li>
+        </ul>
+    </div>
 </nav>
 <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -37,14 +40,14 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg" class="d-block w-100"
+                <img src="../../tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg" class="d-block w-100"
                      alt="...">
             </div>
             <div class="carousel-item">
-                <img src="../tmp_images/schloss-karlsruhe-germany_l.jpg" class="d-block w-100" alt="...">
+                <img src="../../tmp_images/schloss-karlsruhe-germany_l.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="../tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg" class="d-block w-100" alt="...">
+                <img src="../../tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
