--- a/content_pages/marktplatz/Marktplatz.html
+++ b/content_pages/marktplatz/Marktplatz.html
@@ -40,14 +40,14 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../../tmp_images/botanischer-garten-karlsruhe-germany-vtwv_l.jpeg" class="d-block w-100"
+                <img src="images/image3.png" class="d-block w-100"
                      alt="...">
             </div>
             <div class="carousel-item">
-                <img src="../../tmp_images/schloss-karlsruhe-germany_l.jpg" class="d-block w-100" alt="...">
+                <img src="images/image1.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="../../tmp_images/800px-Pyramide_-_Marktplatz_Karlsruhe.jpg" class="d-block w-100" alt="...">
+                <img src="images/image2.png" class="d-block w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
